# uv-python-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  justfile  pyproject.toml  renovate.json
.github/: renovate.json
src/: main.py
src/config/: base.py
